--- a/Lab1/เนื้อหา.md
+++ b/Lab1/เนื้อหา.md
@@ -1,4 +1,8 @@
-#Lab1
+# Lab1 การทดลอง Lightsensor บน Microcontroller
 _____
-##อุปกรณ์
+## อุปกรณ์
+* Microcontroller(ESP32)
+* USB
+* sensor รับแสง
+* สายไฟ
 
