--- a/Lab3/เนื้อหา.md
+++ b/Lab3/เนื้อหา.md
@@ -1,2 +1,14 @@
 # Lab3 การควบคุมหลอดไฟ LED เปิด-ปิด ผ่านทาง wifi
 ____
+อุปกรณ์
+* Microcontroller(ESP32)
+* USB
+* sensor รับแสง
+* สายไฟ
+* หลอดไฟLED 
+* ตัวต้านทาน
+* Breadboard
+
+ขั้นตอนการทดลอง
+1. ต่อ microcontroller เข้ากับ USB ตามปกติ ตามภาพ
+
