--- a/Lab3/เนื้อหา.md
+++ b/Lab3/เนื้อหา.md
@@ -10,5 +10,7 @@ ____
 * Breadboard
 
 ขั้นตอนการทดลอง
-1. ต่อ microcontroller เข้ากับ USB ตามปกติ ตามภาพ
+1. ต่อ microcontroller เข้ากับ USB ตามปกติ ตามภาพโดยที่ต่อใน Bread board
+![Pixc](https://user-images.githubusercontent.com/63835330/79555599-10185280-80ca-11ea-95d0-9b247a77c3aa.jpg)
+2. 
 
