--- a/Lab4/เนื้อหา.md
+++ b/Lab4/เนื้อหา.md
@@ -1,1 +1,20 @@
+# Lab4 การควบคุมหลอดไฟ LED เปิด-ปิด ผ่านทาง wifi
+____
+อุปกรณ์
+* Microcontroller(ESP32)
+* USB
+* sensor รับแสง
+* สายไฟ
+* หลอดไฟLED 
+* ตัวต้านทาน
+* Breadboard
+____
+ขั้นตอนการทดลอง
+1. ต่อ microcontroller เข้ากับ USB ตามปกติ ตามภาพโดยที่ต่อใน Bread board
+![Pixc](https://user-images.githubusercontent.com/63835330/79555599-10185280-80ca-11ea-95d0-9b247a77c3aa.jpg)
+![S__7569423](https://user-images.githubusercontent.com/63835330/79555902-81580580-80ca-11ea-855d-4199e2ae727d.jpg)
+2. ตั้งชื่อและรหัส เป็นhotspot ของเราเองที่โปรแกรม Arduino 
+3. กดที่ serialmonitor เพื่อ address ของโทรศัพท์เรา และนำค่าไปพิมพ์ในโทรศัพท์
+4. เราก็สามารถเปิดปิดได้แล้ว โดยต้องกดตาม pin ที่เราต่อไว้ ไฟถึงจะเปิด-ปิด
+
 
