--- a/Lab1/เนื้อหา.md
+++ b/Lab1/เนื้อหา.md
@@ -14,3 +14,6 @@ _____
 
 ผลการทดลอง 
 * พบว่า เมื่อเราตั้งค่าในโปแกรมว่า ถ้าสว่างคือ 1 และมืดคือ 0 โปรแกรมจะแสดงผลออกมาที่โปรแกรม arduino โดยเมื่อเราไม่ให่มีแสงมากระทบ sensorรับแสง โปรแกรมก็จะแสดงผลเป็นเลข 0 เรื่อยๆตาม Delay ที่ตัั้งค่าไว้ใน Arduino
+___
+Link
+https://drive.google.com/open?id=1GKHDE-PfMqG-PJPUyNqjqTv3MtpM_M38
