--- a/Lab1/เนื้อหา.md
+++ b/Lab1/เนื้อหา.md
@@ -13,7 +13,9 @@ _____
 3) ตั้งค่าต่างๆ ด้วยโปรแกรม Ardiuno
 
 ผลการทดลอง 
-* พบว่า เมื่อเราตั้งค่าในโปแกรมว่า ถ้าสว่างคือ 1 และมืดคือ 0 โปรแกรมจะแสดงผลออกมาที่โปรแกรม arduino โดยเมื่อเราไม่ให่มีแสงมากระทบ sensorรับแสง โปรแกรมก็จะแสดงผลเป็นเลข 0 เรื่อยๆตาม Delay ที่ตัั้งค่าไว้ใน Arduino
+* พบว่า เมื่อเราตั้งค่าในโปแกรมว่า ถ้าสว่างคือ 1 และมืดคือ 0 โปรแกรมจะแสดงผลออกมาที่โปรแกรม arduino โดยเมื่อเราไม่ให่มีแสงมากระทบ sensorรับแสง โปรแกรมก็จะแสดงผลเป็นเลข 0 เรื่อยๆตาม Delay ที่ตัั้งค่าไว้ใน Arduino 
+![IMG_1331](https://user-images.githubusercontent.com/63835330/79560145-3392cb80-80d1-11ea-93cf-7870557980d7.jpg)
+
 ___
 Link
 https://drive.google.com/open?id=1GKHDE-PfMqG-PJPUyNqjqTv3MtpM_M38
