--- a/Lab2/เนื้อหา.md
+++ b/Lab2/เนื้อหา.md
@@ -13,3 +13,7 @@ ___
 4. ไปที่โปรแกรม arduino เพิ่มไฟล์zip ใน sketch --> include Library และทำการ upload 
 5. เปลี่ยนเป็น mode run
 6. เชื่อม hotspot กับโปรแกรม arduino และค่าก็จะมาแสดงในกลุ่มไลน์ที่เรามี Line notify นั้นอยู่
+
+ภาพแสดงผล โดยใช้ชื่อ bunny
+![IMG_1332](https://user-images.githubusercontent.com/63835330/79560649-26c2a780-80d2-11ea-8384-6c608e3f2c4d.PNG)
+
