--- a/Lab3/เนื้อหา.md
+++ b/Lab3/เนื้อหา.md
@@ -1,2 +1,3 @@
-Link Video สำหรับการสมัคร Account Github
-* [การสมัคร Account Github]()
+Link Video 
+* [การสมัคร Account Github](https://drive.google.com/open?id=1HzPxeKB6UYlBNbVEpWBXS1l5oQm8roo0)
+* [การสร้าง Repository, Github page, เปลี่ยน Theme](https://drive.google.com/open?id=1IRcxdNnIshd2MijsEkx-WeVE92uqz8uI)
